gitops/manifests/go-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-go-api
  labels:
    tenant: go-api
