gitops/manifests/go-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api
  namespace: app-go-api
spec:
  selector:
    app: go-api
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
